# my-convex-hull

./: .gitignore  LICENSE  README.md  setup.cfg
docs/myConvexHull/: dtype.html  index.html  line_utils.html  point_utils.html
src/myConvexHull/: __init__.py  dtype.py  line.py  line_utils.py  point_utils.py
test/: breastcancer_smoothness.py  breastcancer_texture.py  digits_0304.py  digits_1112.py  iris_petal.py  iris_sepal.py  randomized.py  wine_alcohol.py  wine_malic_acid.py
