[metadata]
name = myConvexHull
version = 0.0.1
author = Raden Rifqi Rahman
author_email = 13520166@std.stei.itb.ac.id
description = A simple convex hull calculation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Radenz/my-convex-hull
project_urls =
    Bug Tracker = https://github.com/Radenz/my-convex-hull/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    sklearn
python_requires = >=3.10

[options.packages.find]
where = src